--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "Michael Chen",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "mongoose": "^4.13.6",
+    "morgan": "^1.9.0",
+    "pug": "^2.0.0-rc.4"
   }
 }
