--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   "author": "Michael Chen",
   "license": "MIT",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.5",
+    "apollo-client": "^2.2.0",
+    "apollo-link-http": "^1.3.2",
+    "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
+    "graphql-tools": "^2.18.0",
     "http": "0.0.0",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
@@ -21,6 +28,7 @@
     "passport-local-mongoose": "^4.4.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
+    "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "socket.io": "^2.0.4"
   },
