--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "build": "./node_modules/.bin/webpack",
+    "start": "npm run-script build && node app.js"
   },
   "author": "Michael Chen",
   "license": "MIT",
@@ -20,6 +21,16 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
     "pug": "^2.0.0-rc.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "webpack": "^3.10.0"
   }
 }
