--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Michael Chen",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
@@ -23,6 +24,7 @@
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
