--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "socket.io": "^2.0.4"
   },
@@ -33,6 +34,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "redux": "^3.7.2",
     "webpack": "^3.10.0"
   }
 }
