--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
